C:/Program Files/Git/addNewBlog

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -44,6 +44,11 @@
             window.location.href='changeAboutText';
             return false;
         }
+        else (clicked_id==4)
+        {
+            window.location.href='addNewBlog';
+            return false;
+        }
     }
 </script>
 <% include ../partials/footer.ejs %>
